Added Db sets to the application db context. Mapped the many to many relationships between Application users and trips, as well as the many to many relationships between days and activities. Configured startup to inject the scoped service for the repository wrapper.

--- a/JungleBook/appsettings.json
+++ b/JungleBook/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-JungleBook-8F0498FE-48E3-41FB-8110-F955E51D13C5;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=JungleBook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
