--- a/JungleBook/JungleBook.csproj
+++ b/JungleBook/JungleBook.csproj
@@ -6,11 +6,33 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200416163632_Initial.cs" />
+    <Compile Remove="Migrations\20200416163632_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20200416164240_Initial.cs" />
+    <Compile Remove="Migrations\20200416164240_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20200416164503_Initial.cs" />
+    <Compile Remove="Migrations\20200416164503_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20200416165936_Initial.cs" />
+    <Compile Remove="Migrations\20200416165936_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20200416170114_Initial.cs" />
+    <Compile Remove="Migrations\20200416170114_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20200416170127_Initial.cs" />
+    <Compile Remove="Migrations\20200416170127_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20200416170302_Initial.cs" />
+    <Compile Remove="Migrations\20200416170302_Initial.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
 </Project>
