Abstracted services from presentation to Infrastructure/Services. Moved a helper method from the email invitation service to util folder.  Added Interfaces for corresponding services to Application/Interfaces. Updated namespaces and using statements accordingly. Created a dependency injection configuration for Infrastructure which injects the db context as well as identity and scoped services.

--- a/.gitignore
+++ b/.gitignore
@@ -349,4 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-JungleBook/API_Keys.cs
+Domain/API_Keys.cs
